<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/image_menu"
        android:layout_width="550dp"
        android:layout_height="380dp"
        android:layout_marginLeft="100dip"
        android:src="@drawable/sobremesa"
        android:contentDescription="@string/app_name" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="155dp"
        android:layout_marginTop="48dp"
        android:layout_toRightOf="@+id/image_menu"
        android:text="Nome do produto"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_alignTop="@+id/btChamarGarcon"
        android:text="Descrição do produto"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/btChamarGarcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView1"
        android:layout_marginRight="32dp"
        android:layout_marginTop="49dp"
        android:text="@string/btChamarGarcon" />

    <Button
        android:id="@+id/btInicio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/btChamarGarcon"
        android:layout_below="@+id/btChamarGarcon"
        android:layout_marginRight="27dp"
        android:layout_marginTop="66dp"
        android:text="@string/btInicio" />

    <NumberPicker
        android:id="@+id/numberPicker1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btChamarGarcon"
        android:layout_marginLeft="41dp"
        android:layout_toRightOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignTop="@+id/numberPicker1"
        android:layout_marginTop="43dp"
        android:text="Quantidade"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/image_menu"
        android:layout_alignRight="@+id/textView3"
        android:text="Pedir" />

</RelativeLayout>